# Product_Manager

./: .env.test  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_23_1804-4ec59dc8c42d_initial_tables.py  2024_03_23_1813-57462c1f8673_add_description_in_products_table.py  2024_10_31_1201-abceace37dba_add_user_table.py
app/api/: __init__.py
app/api/db/models/: __init__.py  products.py  users.py
app/api/endpoints/: product.py
app/api/schemas/: __init__.py  product.py
app/errors/: __init__.py  exceptions.py  handlers.py  models.py
tests/: __init__.py  test_app.py  test_db_settings.py
