[tool.poetry]
name = "product-manager"
version = "0.1.0"
description = ""
authors = ["Татьяна Сарафанова <sara4ka0@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
